--- a/_src/stylesheets/post/_meta.scss
+++ b/_src/stylesheets/post/_meta.scss
@@ -2,8 +2,6 @@ article
 {
   & > header, & > footer
   {
-    @include clearfix;
-    
     p
     {
       background: #eee;
@@ -12,16 +10,19 @@ article
       margin: 0;
       padding: .2em .4em;
     }
-    
+
     a[rel="permalink"] { float: right }
   }
-  
+
   & > header p
   {
+    background: rgba(255, 255, 255, 0.4);
     margin: .5em 0 1em;
-    @include border-top-radius(.2em);
+    @include box-shadow(#999 0 0 1px inset);
+    @include box-sizing(border-box);
+    @include border-radius(.2em);
   }
-  
+
   & > footer p
   {
     margin: .5em 0 0;
