Up-play the headers and add snowy background

--- a/_src/stylesheets/main.scss
+++ b/_src/stylesheets/main.scss
@@ -5,6 +5,8 @@
 
 body
 {
+  /* background pattern: http://subtlepatterns.com/?p=1058 */
+  background-image: url('/images/patterns/snow.png');
   border-top: .3em solid #666;
   color: #333;
   text-shadow: white 0 1px 1px;
