--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -187,6 +187,8 @@ a:active {
   color: #999; }
 
 body {
+  /* background pattern: http://subtlepatterns.com/?p=1058 */
+  background-image: url("/images/patterns/snow.png");
   border-top: .3em solid #666;
   color: #333;
   text-shadow: white 0 1px 1px; }
@@ -286,7 +288,7 @@ article > footer p {
   border-bottom-right-radius: 0.2em; }
 
 article.post h2, article.post h3 {
-  color: #666;
+  color: #333;
   font-weight: bold; }
 article.post h2 {
   font-size: 1.8em;
