Update projects on about-me page

--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -40,16 +40,16 @@
     code just happens to be one of the ways I do it with. Here’s some cody thingies
     I’ve made:
 
-    [Hallon](https://github.com/Burgestrand/Hallon)
-    : Ruby bindings for the official [Spotify](http://spotify.com) API.
+    [Spotify](https://github.com/Burgestrand/spotify)
+    : Ruby bindings for the official [Spotify](http://spotify.com) C API, libspotify.
 
-    [Dimma](https://github.com/Burgestrand/Dimma)
-    : A ruby library for the [Beacon](http://beaconpush.com/) REST API.
+    [Ruhue](https://github.com/Burgestrand/ruhue)
+    : Ruby library for interacting with the reverse-engineered [Philips Hue](http://meethue.com/) Hub HTTP API.
 
-    [vlad-nginx](https://github.com/Burgestrand/vlad-nginx)
-    : NGiNX recipe for Vlad the Deployer.
+    [Hue API](https://burgestrand.github.com/hue-api/)
+    : An effort to reverse-engineer and document the HTTP API of the [Philips Hue](http://meethue.com/) Hub.
 
-    [radiofy.se](http://beta.radiofy.se/) <small>(co-developer)</small>
+    [radiofy.se](http://beta.radiofy.se/) <small>(co-developer for nearly two years)</small>
     : A website built around a service where we aggregate data from Swedish radio
       stations and put their music into (automatically updated) Spotify playlists
       grouped by channel. <small>(built using ruby on rails)</small>
