Fix link to Hue API (burgestrand.se no likey HTTPS)

--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -46,7 +46,7 @@
     [Ruhue](https://github.com/Burgestrand/ruhue)
     : Ruby library for interacting with the reverse-engineered [Philips Hue](http://meethue.com/) Hub HTTP API.
 
-    [Hue API](https://burgestrand.github.com/hue-api/)
+    [Hue API](http://burgestrand.github.com/hue-api/)
     : An effort to reverse-engineer and document the HTTP API of the [Philips Hue](http://meethue.com/) Hub.
 
     [radiofy.se](http://beta.radiofy.se/) <small>(co-developer for nearly two years)</small>
