--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -1,7 +1,7 @@
 <header>
   <hgroup>
     <h1>Kim Burgestrand</h1>
-    <h2>… and his miscellaneous freaky — but brilliant — ideas and thoughts.</h2>
+    <h2>… and his miscellaneous freaky ideas and thoughts.</h2>
   </hgroup>
   {% include common/navigation.html %}
   <div class="clear"></div>
