--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -12,11 +12,8 @@
   %img.photo{src: 'http://www.gravatar.com/avatar/b67b73b5b1fd84119ec788b1c3df02ad.png?s=234', alt: 'Me!', width: 234}
 
   %dl
-    %dt Likes
-    %dd <em>beautiful</em> code, teaching, documentation
-
-    %dt Does
-    %dd web & library development, martial arts, juggling, wake-boarding
+    %dt Enjoys
+    %dd software development, martial arts, juggling, wake- &amp; snowboarding
 
     %dt Exists
     %dd
@@ -35,9 +32,7 @@
     Stockholm archipelago. I currently live with my girlfriend Elin in Gothenburg,
     where I work at this awesome lil' place called [Elabs](http://elabs.se/).
 
-    I try to avoid defining myself as a programmer. I do enjoy creating things, and
-    code just happens to be one of the ways I do it with. Here’s some cody thingies
-    I’ve made:
+    Here are some things I've made:
 
     [Spotify](https://github.com/Burgestrand/spotify)
     : Ruby bindings for the official [Spotify](http://spotify.com) C API, libspotify.
