--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" href="/stylesheets/normalize.css">
 <link rel="stylesheet" href="/stylesheets/syntax.css">
-<link rel="stylesheet" href="/stylesheets/rrssb.css" />
+<link rel="stylesheet" href="/stylesheets/rrssb.min.css" />
 <link rel="stylesheet" href="/stylesheets/solo.css">
 
 <link rel="canonical" href="{{ site.url }}" />
