--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="/stylesheets/syntax.css">
 <link rel="stylesheet" href="/stylesheets/rrssb.min.css" />
 <link rel="stylesheet" href="/stylesheets/solo.css">
+<link rel="stylesheet" href="/stylesheets/custom.css">
 
 <link rel="canonical" href="{{ site.url }}" />
 
