Remove unncessary javascripts include.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,8 @@ layout: compress
     </div>
 
     {% include icons.html %}
-    {% include javascripts.html %}
+
+    <script src="/javascripts/jquery.min.js"></script>
+    <script src="/javascripts/timeago.js"></script>
   </body>
 </html>
