--- a/_sass/components/_social-links.scss
+++ b/_sass/components/_social-links.scss
@@ -15,7 +15,7 @@
     {
       > .icon
       {
-        fill: delta;
+        fill: $delta;
       }
     }
 
@@ -35,7 +35,7 @@
       margin: 0 auto;
       font-size: 13px;
       padding: 3px 10px;
-      background: beta;
+      background: $beta;
       color: #fff;
       border-radius: 2px;
       height: 22px;
