--- a/_sass/components/_others.scss
+++ b/_sass/components/_others.scss
@@ -1,7 +1,7 @@
 .evidence
 {
   background-image: linear-gradient(to bottom, rgba(39,243,106,0.15), rgba(39,243,106,0.15));
-  color: beta;
+  color: $beta;
 }
 
 .star
