--- a/_sass/pages/_home-blog-projects.scss
+++ b/_sass/pages/_home-blog-projects.scss
@@ -4,7 +4,7 @@
 
   > .list
   {
-    border-top: 1px solid epsilon;
+    border-top: 1px solid $epsilon;
     margin-top: 30px;
     padding-top: 40px;
     position: relative;
