--- a/_sass/components/_author.scss
+++ b/_sass/components/_author.scss
@@ -1,47 +1,24 @@
 .author
 {
-  padding: 3rem 0;
-  border-bottom: 1px solid $epsilon;
+  padding: 4rem 0 0;
   border-top: 1px solid $epsilon;
   max-width: 100%;
-  margin: 9rem auto 0;
-
-  > .toleft > .selfie
-  {
-    width: 90%;
-    border-radius: 100%;
-  }
-
-  > .toright > .name,
-  > .toright > .bio
-  {
-    width: 60%;
-    display: inline-block;
-  }
-
-  > .toright > .name
-  {
-    font-size: 1.5rem;
-    font-family: $fontSans;
-    font-weight: 500;
-    margin: 6px 0 0;
-  }
-
-  > .toright > .bio
-  {
-    font-family: $fontSans;
-    font-weight: 300;
-    color: $gama;
-    font-size: 1.3rem;
-    text-align: justify;
-    line-height: 1.5;
-    margin: 0;
-  }
+  margin: 0 auto;
 
   > .toleft
   {
     width: 10%;
     display: inline-block;
+
+    > .link {
+      width: 90%;
+      display: inline-block;
+
+      > .selfie
+      {
+        border-radius: 100%;
+      }
+    }
   }
 
   > .toright
@@ -49,5 +26,30 @@
     width: 89%;
     display: inline-block;
     vertical-align: top;
+
+    .link {
+      > .name, > .bio {
+        font-family: $fontSans;
+        width: 60%;
+        display: inline-block;
+      }
+
+      > .name
+      {
+        font-size: 1.5rem;
+        font-weight: 500;
+        margin: 6px 0 0;
+      }
+
+      > .bio
+      {
+        font-weight: 300;
+        color: $gama;
+        font-size: 1.3rem;
+        text-align: justify;
+        line-height: 1.5;
+        margin: 0;
+      }
+    }
   }
 }
