--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -1,8 +1,8 @@
 .footer-main
 {
   border-top: 1px solid $epsilon;
-  padding: 40px 0;
-  margin: 40px 0 0;
+  padding: 4rem 0;
+  margin: 4rem 0 0;
   font-size: 1.3rem;
   color: $gama;
   font-weight: 300;
