Add rubygems social icon.

--- a/_includes/layout/social-links.html
+++ b/_includes/layout/social-links.html
@@ -64,4 +64,10 @@
     <svg class="icon icon-mail"><use xlink:href="#icon-mail"></use></svg>
   </a>
   {% endif %}
+
+  {% if site.social.rubygems %}
+  <a class="link" data-title="rubygems.org/profiles/{{ site.social.rubygems }}" href="https://rubygems.org/profiles/Burgestrand" target="_blank">
+    <svg class="icon icon-rubygems"><use xlink:href="#icon-rubygems"></use></svg>
+  </a>
+  {% endif %}
 </div>
