--- a/_sass/base/_general.scss
+++ b/_sass/base/_general.scss
@@ -52,7 +52,7 @@ a
 p
 {
   line-height: 1.7;
-  color: alpha;
+  color: $alpha;
   font-weight: 300;
   margin-bottom: 20px;
   letter-spacing: 0.4px;
@@ -117,6 +117,10 @@ figure.highlight
 {
   width: 100%;
   margin: 0;
+
+  > pre {
+    white-space: pre;
+  }
 }
 
 code, tt
