Center images in side-by-side sections.

--- a/_sass/components/_side-by-side.scss
+++ b/_sass/components/_side-by-side.scss
@@ -7,6 +7,12 @@
   {
     display: inline-block;
     width: 47.5%;
+
+    > .image {
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
   > .toleft
