--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,9 +35,7 @@ layout: default
 
 <section class="author">
   <div class="toleft">
-    <a class="link" href="{{ site.url }}/about">
-      <img class="selfie" src="{{ site.url }}/{{ site.picture }}" alt="{{ site.author }}">
-    </a>
+    {% include selfie.html %}
   </div>
 
   <div class="toright">
