Move /blog to /articles

--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -19,9 +19,9 @@
     </li>
     {% endif %}
 
-    {% if page.path != "blog/index.html" %}
+    {% if page.path != "articles/index.html" %}
     <li class="item">
-      <a class="link" href="{{ site.url }}/blog">Blog</a>
+      <a class="link" href="{{ site.url }}/articles">Articles</a>
     </li>
     {% endif %}
 
