--- a/_includes/vars.html
+++ b/_includes/vars.html
@@ -1,3 +1,3 @@
-{% if page.path == "index.html" or page.path == "about.html" or page.path == "blog/index.html" %}
+{% if page.path == "index.html" or page.path == "about.html" or page.path == "articles/index.html" %}
   {% assign root_page = true %}
 {% endif %}
