--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer-main">
-  {{ site.author }} <a class="link" href="{{ site.url }}/feed.xml" target="_blank"><svg class="icon icon-rss"><use xlink:href="#icon-rss"></use></svg></a>
+  Feed <a class="link" data-title="Feed" href="{{ site.url }}/feed.xml" target="_blank"><svg class="icon icon-rss"><use xlink:href="#icon-rss"></use></svg></a>.
 
   <p class="extra">
-    <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a> by <a class="link" href="http://koppl.in">Kopplin</a>
+    Theme: <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo</a>.
   </p>
 </footer>
