Move /about to /about-me because that's what it used to be.

--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -25,9 +25,9 @@
     </li>
     {% endif %}
 
-    {% if page.path != "about.html" %}
+    {% if page.path != "about-me/index.html" %}
     <li class="item">
-      <a class="link" href="{{ site.url }}/about">About</a>
+      <a class="link" href="{{ site.url }}/about-me/">About Me</a>
     </li>
     {% endif %}
   </ul>
