--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@ layout: default
   </div>
 
   <div class="toright">
-    <a class="link" href="{{ site.url }}/about">
+    <a class="link" href="{{ site.url }}/about-me/">
       <h4 class="name">{{ site.author }}</h4>
       <p class="bio">{{ site.description }}</p>
     </a>
