--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -48,6 +48,7 @@
   > .list
   {
     padding: 0;
+    text-align: center;
 
     > .item > .link
     {
@@ -56,7 +57,6 @@
       margin: 0;
       border-radius: 4%;
       transition: all .4s ease-in-out;
-      width: 70px;
 
       &:hover
       {
