Fix titles to have my name last

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta name=description content="{{ site.description }}">
     <meta name=author content="{{ site.author }}">
 
-    <title>{{ site.author }} &middot; {{ page.title }}</title>
+    <title>{{ page.title }} &middot; {{ site.author }} </title>
 
     {% seo %}
 
