--- a/_includes/selfie.html
+++ b/_includes/selfie.html
@@ -1,3 +1,3 @@
-<a class="link" href="{{ site.url }}/about-me/">
-  <img class="selfie" src="{{ site.url }}/assets/images/selfies/sqore.jpg" alt="{{ site.author }}">
+<a class="link selfie-picture" href="{{ site.url }}/about-me/">
+  <img src="{{ site.url }}/assets/images/selfies/sqore.jpg" alt="{{ site.author }}">
 </a>
