--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -4,20 +4,10 @@
   margin: 0 auto;
   text-align: center;
 
-  > .link > .selfie
+  > .link > img
   {
     width: 125px;
     margin-bottom: 25px;
-    border-radius: 100%;
-    transition: all .2s;
-    box-shadow: 0;
-    opacity: 1;
-
-    &:hover
-    {
-      box-shadow: 0 0px 4px 0 rgba(0,0,0,0.18), 0 0px 12px 0 rgba(0,0,0,0.15);
-      opacity: .8;
-    }
   }
 
   > .title
