--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/nav";
 @import "components/others";
 @import "components/related";
+@import "components/selfie-picture";
 @import "components/share";
 @import "components/side-by-side";
 @import "components/social-links";
