--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -56,7 +56,7 @@
       padding: 7px 15px;
       margin: 0;
       border-radius: 4%;
-      transition: all .4s ease-in-out;
+      transition: color .4s ease-in-out;
 
       &:hover
       {
