Add draft for postgres rails sidekiq memory post

--- a/_sass/components/_others.scss
+++ b/_sass/components/_others.scss
@@ -48,6 +48,14 @@
   margin: 5rem 0 5rem -15%;
 }
 
+.centered
+{
+  display: block;
+  width: 80%;
+  position: relative;
+  margin: 0 auto;
+}
+
 .breaker
 {
   height: 1px;
