--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include layout/header.html %}
 
-<h1 class="title">{{ page.title }}</h1>
+<h1 class="title {% if page.draft %}draft{% endif %}">{{ page.title }}</h1>
 
 <span class="date">
   <time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date: "%A. %b %d, %Y" }}</time>
