--- a/_sass/components/_others.scss
+++ b/_sass/components/_others.scss
@@ -14,6 +14,15 @@
   }
 }
 
+.draft .title, .title.draft{
+  &:after {
+    content: " (draft)";
+    font-variant: small-caps;
+    font-weight: bold;
+    color: #C30;
+  }
+}
+
 .twitter-tweet
 {
   margin: 10px auto;
