Make code be just slightly smaller than its surroundings.
It's large enough, being pink. Reducing the size looks OK.

--- a/_sass/base/_general.scss
+++ b/_sass/base/_general.scss
@@ -127,7 +127,7 @@ code, tt
 {
   padding: 1px 0;
   font-family: $fontMonospace;
-  font-size: 12px;
+  font-size: 80%;
   line-height: 20px;
   background: #fff;
   border-radius: 2px;
