--- a/_sass/base/_general.scss
+++ b/_sass/base/_general.scss
@@ -148,6 +148,7 @@ pre
   border: 1px solid $epsilon;
   border-radius: 2px;
   white-space: pre;
+  tab-size: 4;
 }
 
 .wrapper-normal, .wrapper-large
