--- a/_sass/components/_others.scss
+++ b/_sass/components/_others.scss
@@ -23,6 +23,20 @@
   }
 }
 
+.subtitle.categories {
+  font-size: .8em;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: block;
+
+  li {
+    display: inline-block;
+    font-weight: bolder;
+    color: #AAA;
+  }
+}
+
 .twitter-tweet
 {
   margin: 10px auto;
