--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,7 +13,12 @@
 @import "components/header";
 @import "components/nav";
 @import "components/others";
+@import "components/pagination";
 @import "components/selfie-picture";
 @import "components/share";
 @import "components/side-by-side";
 @import "components/social-links";
+
+html {
+    scroll-behavior: smooth;
+}
