--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   text-align: center;
 
-  > .link > img
+  .selfie-picture > img
   {
     width: 125px;
     margin-bottom: 25px;
@@ -14,6 +14,11 @@
   {
     font-size: 4rem;
     margin: 0 0 13px;
+    
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
   }
 
   > .description
