--- a/_includes/layout/social-links.html
+++ b/_includes/layout/social-links.html
@@ -1,4 +1,4 @@
-<div class="social-links">
+<nav class="social-links">
   {% if site.social.email %}
   <a class="link" data-title="{{ site.social.email }}" href="mailto:{{ site.social.email }}" target="_blank">
     <svg class="icon icon-mail"><use xlink:href="#icon-mail"></use></svg>
@@ -70,4 +70,4 @@
     <svg class="icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
   </a>
   {% endif %}
-</div>
+</nav>
