--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: default
   </div>
 
   <div class="toright">
-    <a class="link" href="{% link about-me/index.html %}#content">
+    <a class="link" href="{% link about-me/index.html %}">
       <h4 class="name">{{ site.author }}</h4>
       <p class="bio">{{ site.description }}</p>
     </a>
