--- a/_includes/selfie.html
+++ b/_includes/selfie.html
@@ -1,3 +1,3 @@
-<a class="link selfie-picture" href="{% link about-me/index.html %}#content">
+<a class="link selfie-picture" href="{% link about-me/index.html %}">
   <img src="{% link assets/images/selfies/sqore.jpg %}" alt="A photo of {{ site.author }}">
 </a>
