--- a/_sass/base/_general.scss
+++ b/_sass/base/_general.scss
@@ -151,21 +151,19 @@ pre
   tab-size: 4;
 }
 
-.wrapper-normal, .wrapper-large
-{
-  height: 100%;
-  width: 96%;
-  margin: 0 auto;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .wrapper-normal
 {
+  display: flex;
+  height: 100vh;
+  width: 96%;
+  margin: 0 auto;
   max-width: 560px;
-}
-
-.wrapper-large
-{
-  max-width: 810px;
 }
 
 /* inline code tags */
