--- a/_sass/pages/_home-blog-projects.scss
+++ b/_sass/pages/_home-blog-projects.scss
@@ -1,7 +1,13 @@
-.index
-{
-  margin-top: 125px;
+.page.home {
+  margin-top: 10vw;
+}
 
+.page:not(.home) {
+  margin-top: 2vw;
+}
+
+.page.articles
+{
   > .list
   {
     border-top: 1px solid $epsilon;
@@ -27,7 +33,7 @@
   }
 }
 
-.index > .list
+.page.articles > .list
 {
   > .item
   {
